@@ -263,6 +263,7 @@ enum text_object_type {
 	OBJ_pid_egid,
 	OBJ_pid_sgid,
 	OBJ_pid_fsgid,
+	OBJ_pid_read,
 	OBJ_pid_vmpeak,
 	OBJ_pid_vmsize,
 	OBJ_pid_vmlck,
@@ -273,6 +274,7 @@ enum text_object_type {
 	OBJ_pid_vmexe,
 	OBJ_pid_vmlib,
 	OBJ_pid_vmpte,
+	OBJ_pid_write,
 	OBJ_gid_name,
 	OBJ_uid_name,
 	OBJ_processes,
